--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/react-dom": "18.2.4",
     "@types/validator": "^13.7.17",
     "autoprefixer": "10.4.14",
+    "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "jose": "^4.14.4",
     "jsonwebtoken": "^9.0.0",
